# HandDetection

./: pyproject.toml
hands/: __init__.py
hands/core/: Cams.py  Filters.py  Processor.py  detectors.py  middleware.py
hands/models/: objects.py
