[tool.poetry]
name = "hands"
version = "0.1.0"
description = ""
authors = ["techatlasdev <srgoqui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mediapipe = "^0.10.18"
opencv-python = "^4.10.0.84"
pyautogui = "^0.9.54"

[tool.poetry.scripts]
grises = "hands:grises"
normal = "hands:normal"
manos = "hands:detectHands"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
